# jazzer

./: format.sh
.github/workflows/: check-formatting.yml
bazel/tools/java/com/code_intelligence/jazzer/tools/: FuzzTargetTestWrapper.java
examples/junit/src/test/java/com/example/: InvalidFuzzTests.java
src/jmh/java/com/code_intelligence/jazzer/runtime/: FuzzerCallbacksBenchmark.java
src/main/java/com/code_intelligence/jazzer/: Jazzer.java
src/main/java/com/code_intelligence/jazzer/agent/: AgentInstaller.java
src/main/java/com/code_intelligence/jazzer/api/: AutofuzzInvocationException.java  FuzzedDataProvider.java
src/main/java/com/code_intelligence/jazzer/autofuzz/: FuzzTarget.java  Meta.java
src/main/java/com/code_intelligence/jazzer/driver/: Driver.java  FuzzTargetFinder.java  FuzzTargetHolder.java  FuzzTargetRunner.java  FuzzedDataProviderImpl.java  Opt.java  OptParser.java  ReproducerTemplate.java
src/main/java/com/code_intelligence/jazzer/junit/: AgentConfigurator.java  FuzzTest.java  FuzzTestArgumentsProvider.java  FuzzTestExecutor.java  FuzzTestExtensions.java  Utils.java
src/main/java/com/code_intelligence/jazzer/runtime/: CoverageMap.java  JazzerInternal.java  NativeLibHooks.java  TraceCmpHooks.java  TraceDataFlowNativeCallbacks.java  TraceDivHooks.java
src/main/java/jaz/: Zer.java
src/test/java/com/code_intelligence/jazzer/utils/: BUILD.bazel  ManifestUtilsTest.java
src/test/resources/: BUILD.bazel
tests/src/test/java/com/example/: CoverageFuzzer.java  DisabledHooksFuzzer.java
(+13 files in other folders)
